# spectrasuite

./: .gitignore  AGENTS.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  ai.cleaned.patch  pyproject.toml  run.txt
New folder/: ai.patch
PATCH_NOTES/: PATCH_NOTES_v0.1.0(a).md  PATCH_NOTES_v0.1.0(b).md  PATCH_NOTES_v0.1.0(c).md  PATCH_NOTES_v0.1.0(d).md  PATCH_NOTES_v0.1.0(e).md  PATCH_NOTES_v1.0.0(f).md  PATCH_NOTES_v1.0.0(g).md  PATCH_NOTES_v1.0.0(h).md  PATCH_NOTES_v1.0.0(i).md  PATCH_NOTES_v1.0.0(j).md  PATCH_NOTES_v1.0.0(k).md  PATCH_NOTES_v1.0.0(l).md  PATCH_NOTES_v1.0.0(m).md  PATCH_NOTES_v1.0.0(n).md  PATCH_NOTES_v1.0.0(o).md  PATCH_NOTES_v1.0.0(p).md  PATCH_NOTES_v1.0.0(q).md
app/: app_patched.py
atlas/: README.md  architecture.md  data_model.md  export_manifest.md  fetchers_overview.md  ingest_ascii.md  ingest_fits.md  overlays_lines.md  performance.md  testing.md  transforms.md  ui_contract.md
brains/: v0.1.0a__assistant__bootstrap.md  v0.1.0b__assistant__fits_ingest.md  v0.1.0c__assistant__fits_wcs.md  v0.1.0d__assistant__ascii_resilience.md  v0.1.0e__assistant__ascii_headerless.md  v1.0.0f__assistant__ascii_unit_hints.md  v1.0.0g__assistant__ascii_error_filter.md  v1.0.0h__assistant__frequency_energy_ingest.md  v1.0.0i__assistant__energy_axis_extensions.md  v1.0.0j__assistant__axis_provenance_ui.md  v1.0.0k__assistant__transform_provenance_ui.md  v1.0.0l__assistant__archive_fetchers.md  v1.0.0m__assistant__star_hub_ingest.md  v1.0.0n__assistant__archive_metadata_resilience.md  v1.0.0o__assistant__similarity_panel.md  (+1 more)
handoffs/: AI Handoff Initial.txt  (+20 more)
(+65 files in other folders)
