[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-app"
version = "1.0.0.dev12"

description = "Research-grade spectral comparison toolkit"
readme = "README.md"
authors = [{name = "Spectra App Team"}]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.33.0",
    "plotly>=5.20.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.11.0",
    "astropy>=6.0.0",
    "specutils>=1.14",
    "astroquery>=0.4.7",
    "pyyaml>=6.0",
    "kaleido>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "hypothesis>=6.99.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "types-PyYAML>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "(^/\\.git|^/\\.venv|docs/static)"

[tool.ruff]
line-length = 100
exclude = [".git", ".venv", "docs/static"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "S", "W", "C90"]
ignore = ["E501"]
per-file-ignores = {"tests/*" = ["S101"]}

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
minversion = "8.1"
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*", "tools*", "tests*"]
